--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,14 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
+    // workaround for "duplicate files during packaging of APK" issue
+    // see https://groups.google.com/d/msg/adt-dev/bl5Rc4Szpzg/wC8cylTWuIEJ
+    packagingOptions {
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+
     defaultConfig {
         applicationId "com.acc.vendorcrew"
         minSdkVersion 15
@@ -22,4 +30,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.couchbase.lite:couchbase-lite-android:0.0.0-463'
 }
