--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:name=".Vendor"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".Vendor">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
@@ -40,7 +40,11 @@
         <activity
             android:name=".activities.AddBrandsActivity"
             android:label=""
-            android:theme="@style/CustomTheme">
+            android:theme="@style/CustomTheme" >
+        </activity>
+        <activity
+            android:name=".activities.ValidateUserActivity"
+            android:label="@string/title_activity_validate_user" >
         </activity>
     </application>
 
