--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.couchbase.lite:couchbase-lite-android:0.0.0-463'
+    compile 'uk.co.androidalliance:edgeeffectoverride:1.0.2'
     compile 'com.getbase:floatingactionbutton:1.8.0'
 }
