--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <!-- enable the search dialog to send searches to SearchableActivity -->
+        <meta-data android:name="android.app.default_searchable"
+            android:value=".activities.SearchableActivity" />
+        
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
@@ -36,20 +41,27 @@
             android:name=".activities.AddVendorCategoryActivity"
             android:label=""
             android:theme="@style/CustomTheme" >
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name=".activities.AddBrandsActivity"
             android:label=""
             android:theme="@style/CustomTheme" >
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
-
         </activity>
         <activity
             android:name=".activities.ValidateUserActivity"
             android:label="@string/title_activity_validate_user" >
+        </activity>
+        <activity
+            android:name=".activities.SearchableActivity"
+            android:label="@string/title_activity_searchable" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
         </activity>
     </application>
 
